--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,22 +1,55 @@
 main:
 
-  - title: Continual Learning for Abdominal Multi-Organ and Tumor Segmentation
-    authors: Yixiao Zhang, Xinyi Li, Huimiao Chen, Alan Yuille, <strong>Yaoyao Liu*</strong>, Zongwei Zhou* (*Corresponding authors)
-    conference_short: MICCAI
-    conference: International Conference on Medical Image Computing and Computer-Assisted Intervention <strong>(MICCAI)</strong>, 2023.
-    pdf: https://arxiv.org/pdf/2306.00988.pdf
-    code: https://github.com/MrGiovanni/ContinualLearning
-    bibtex: https://bib.yliu.me/MICCAI23.txt
-    image: ./assets/img/teaser_example_2.png
-    notes: Early Accept
+  - title: InfoCom: Kilobyte-Scale Communication-Efficient Collaborative Perception with Information Bottleneck
+    authors: <strong>Quanmin Wei</strong>, Penglin Dai*, Wei Li, Bingyi Liu, Xiao Wu (*Corresponding authors)
+    conference_short: AAAI
+    conference: AAAI Conference on Artificial Intelligence <strong>(AAAI)</strong>, 2026.
+    # pdf: https://ojs.aaai.org/index.php/AAAI/article/download/34502/36657
+    code: https://github.com/fengxueguiren/InfoCom
+    page: https://weiquanmin.github.io/infocom
+    # bibtex: https://bib.yliu.me/MICCAI23.txt
+    image: ./assets/img/teaser_infocom.png
+    # notes: Oral Presentation
 
-  - title: "Mnemonics Training: Multi-Class Incremental Learning without Forgetting"
-    authors: <strong>Yaoyao Liu</strong>, Yuting Su, An-An Liu, Bernt Schiele, Qianru Sun
-    conference_short: CVPR
-    conference: IEEE/CVF Conference on Computer Vision and Pattern Recognition <strong>(CVPR)</strong>, 2020.
-    pdf: https://arxiv.org/pdf/2002.10211.pdf
-    code: https://github.com/yaoyao-liu/class-incremental-learning/tree/main/mnemonics-training
-    page: https://class-il.mpi-inf.mpg.de/mnemonics/
-    bibtex: https://class-il.mpi-inf.mpg.de/mnemonics/
+  - title: Pragmatic Heterogeneous Collaborative Perception via Generative Communication Mechanism
+    authors: Junfei Zhou, Penglin Dai*, <strong>Quanmin Wei<\strong>, Bingyi Liu, Xiao Wu, Jianping Wang
+    conference_short: NeurIPS
+    conference: IEEE/CVF Conference on Computer Vision and Pattern Recognition <strong>(NeurIPS)</strong>, 2025.
+    pdf: https://arxiv.org/pdf/2510.19618?
+    code: https://github.com/jeffreychou777/GenComm
+    page: https://jeffreychou777.github.io/GenComm/
+    # bibtex: https://class-il.mpi-inf.mpg.de/mnemonics/
+    # notes: Oral Presentation
+    image: ./assets/img/teaser_gencomm.png
+    
+  - title: Cooperative Perception of Multi-Agents under the Spatio-Temporal Drift Issue
+    authors: Penglin Dai*, Hao Zhou, <strong>Quanmin Wei</strong>, Xiao Wu, Zhanbo Sun, Zhaofei Yu (*Corresponding authors)
+    conference_short: TITS
+    conference: IEEE Intelligent Transportation Systems Transactions
+    # pdf: https://ojs.aaai.org/index.php/AAAI/article/download/34502/36657
+    # code: https://github.com/fengxueguiren/CoPEFT
+    # bibtex: https://bib.yliu.me/MICCAI23.txt
+    # image: ./assets/img/teaser_copeft.png
+    notes: Early Accept
+    
+  - title: CoPEFT: Fast Adaptation Framework for Multi-Agent Collaborative Perception with Parameter-Efficient Fine-Tuning
+    authors: <strong>Quanmin Wei</strong>, Penglin Dai*, Wei Li, Bingyi Liu, Xiao Wu (*Corresponding authors)
+    conference_short: AAAI
+    conference: AAAI Conference on Artificial Intelligence <strong>(AAAI)</strong>, 2025.
+    pdf: https://ojs.aaai.org/index.php/AAAI/article/download/34502/36657
+    code: https://github.com/fengxueguiren/CoPEFT
+    # bibtex: https://bib.yliu.me/MICCAI23.txt
+    image: ./assets/img/teaser_copeft.png
     notes: Oral Presentation
-    image: ./assets/img/teaser_example.png
+
+
+    
+  - title: AIC-GNN: Adversarial Information Completion for Graph Neural Networks
+    authors: <strong>Quanmin Wei</strong>, Jinyan Wang*, Xingcheng Fu, Jun Hu, Xianxian Li*
+    conference_short: INS
+    conference: Information Sciences
+    pdf: https://www.sciencedirect.com/science/article/pii/S0020025522016073
+    # code: https://github.com/fengxueguiren/CoPEFT
+    # bibtex: https://bib.yliu.me/MICCAI23.txt
+    # image: ./assets/img/teaser_copeft.png
+    # notes: Oral Presentation
