--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -42,4 +42,4 @@ main:
     conference_short: INS
     conference: Information Sciences
     pdf: https://www.sciencedirect.com/science/article/pii/S0020025522016073
-    image: ./assets/img/framework_aic-gnn.png
+    image: ./assets/img/framework_aic-gnn.jpg
