--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -13,7 +13,7 @@ main:
   - title: Pragmatic Heterogeneous Collaborative Perception via Generative Communication Mechanism
     authors: Junfei Zhou, Penglin Dai*, <strong>Quanmin Wei</strong>, Bingyi Liu, Xiao Wu, Jianping Wang
     conference_short: NeurIPS
-    conference: IEEE/CVF Conference on Computer Vision and Pattern Recognition <strong>(NeurIPS)</strong>, 2025.
+    conference: ‌Conference on Neural Information Processing Systems <strong>(NeurIPS)</strong>, 2025.
     pdf: https://arxiv.org/pdf/2510.19618?
     code: https://github.com/jeffreychou777/GenComm
     page: https://jeffreychou777.github.io/GenComm/
