--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Basic Information 
-title: Quanmin Wei (韦全敏)
+title: Quanmin Wei
 position: Ph.D. Student
 affiliation: Southwest Jiaotong University
 email: wqm@my.swjtu.edu.cn
