--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,8 @@ canonical: https://minimal-light-theme.yliu.me/
 google_scholar: https://scholar.google.com.hk/citations?user=mr-xm6gAAAAJ
 # cv_link: assets/files/None.pdf
 github_link: https://github.com/fengxueguiren
+location: Chengdu, China
+orcid_link: https://orcid.org/0000-0001-8840-0743
 # linkedin: https://www.linkedin.com/
 # twitter: https://twitter.com/
 
