--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ email: wqm@my.swjtu.edu.cn
 # The following information is used to improve the website traffic from search engines, e.g., Google.
 keywords: Quanmin Wei, 韦全敏
 description: Quanmin Wei's homepage.
-canonical: https://minimal-light-theme.yliu.me/
+canonical: weiquanmin.github.io
 
 # Links 
 # If you don't need one of them, you may delete the corresponding line.
@@ -36,7 +36,7 @@ auto_dark_mode: true
 
 # Font
 # You can use this option to choose between Serif or Sans Serif fonts.
-font: "Serif" # or "Sans Serif"
+font: "Sans Serif" # or "Sans Serif" or "Serif"
 
 # Google Analytics ID
 # Please remove this if you don't use Google Analytics
@@ -44,7 +44,8 @@ google_analytics: G-KB5DZEKWRD
 
 # Use this project as a remote theme for GitHub Pages
 # See the guide here: https://docs.github.com/en/pages/setting-up-a-github-pages-site-with-jekyll/adding-a-theme-to-your-github-pages-site-using-jekyll
-remote_theme: yaoyao-liu/minimal-light
+# remote_theme: yaoyao-liu/minimal-light
+remote_theme: minima
 
 # The following files will be removed from the generated website.
 exclude:
