--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ title: Quanmin Wei
 position: Ph.D. Student
 affiliation: Southwest Jiaotong University
 email: wqm@my.swjtu.edu.cn
+affiliation_link: https://swjtu.edu.cn/
 
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
